# WheelsIQ-SL

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_pipeline.py
.claude/: settings.local.json
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  (+210 more)
api/: __init__.py  main.py  models.py
dashboard/: app.py
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.worker  init.sql
eval/: questions.json  ragas_eval.py
ingestion/: __init__.py  chunkers.py  document_builder.py  embedder.py  pipeline.py  qdrant_indexer.py
rag/: __init__.py  cag_cache.py  constraint_extractor.py  crag_workflow.py  grader.py  prompts.py  query_classifier.py  synthesizer.py
scraper/: __init__.py  config.py  detail_scraper.py  location_mapper.py  parsers.py  playwright_crawler.py  tasks.py  validators.py
shared/: __init__.py  config.py  database.py  logging.py  models.py
(+1242 files in other folders)
