[project]
name = "prime-wheels-sl"
version = "1.0.0"
description = "Production-scale RAG system for Sri Lankan used vehicles marketplace"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
